css/main.scss
@import '_general';
@import 'menu';
@import 'bars';
@import 'page';
@import 'spinner';

.stripe::before {
  left: 0;
  content: '';
  position: absolute;
  background-color: #B0B0B0;
  opacity: .1;
  bottom: 39%;
  //bottom: 37%;
  height: 18%;
  width: 100%;
  z-index: 1;
  pointer-events: none;
}

#foreground {
  z-index: 10;
  position: absolute;
  top: 0;
  height: 100%;
  width: 100%;
}

#sketchpad {
  height: 100%;
  width: 100%;
  position: absolute;
  opacity: 0;
  overflow: hidden;
}

#bulkstripe {
  width: 100%;
  height: 60%;
  top: 20%;
  position: absolute;
}

#back-canvas {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate3d(-50%, -50%, 0);
}

#displayframe {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
}

#sketchspot {
  pointer-events: none;
  position: absolute;
  height: 80%;
  width: 100%;
  top: 10%;
  z-index: 2;
}

html, body {
  overflow: hidden;
  font-family: 'Oswald', sans-serif;
  background-color: #F0F0F0;
  margin: 0px;
  padding: 0px;
}

a {
  color: black;
  outline: none;
}

